[gd_scene load_steps=9 format=3 uid="uid://c5wjnqn6rar3n"]

[ext_resource type="Texture2D" uid="uid://c81td37k1n6pn" path="res://art/playerGrey_up1.png" id="1_1o5dn"]
[ext_resource type="Script" path="res://player.gd" id="1_i7jcc"]
[ext_resource type="Texture2D" uid="uid://kupy3eexrr50" path="res://art/playerGrey_up2.png" id="2_4wcqc"]
[ext_resource type="PackedScene" uid="uid://blxyhr6p4u4gg" path="res://bullet.tscn" id="2_rufx6"]
[ext_resource type="Texture2D" uid="uid://usf2d3jnmc0k" path="res://art/playerGrey_walk1.png" id="3_sding"]
[ext_resource type="Texture2D" uid="uid://bwq3hphgh0gjx" path="res://art/playerGrey_walk2.png" id="4_lbqlv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_muk1r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_1o5dn")
}, {
"duration": 1.0,
"texture": ExtResource("2_4wcqc")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_sding")
}, {
"duration": 1.0,
"texture": ExtResource("4_lbqlv")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_itkkw"]
radius = 21.0
height = 54.0

[node name="Player" type="Area2D" groups=["player"]]
script = ExtResource("1_i7jcc")
Bullet = ExtResource("2_rufx6")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_muk1r")
animation = &"walk"
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_itkkw")
metadata/_edit_group_ = true

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_bullet_timer_timeout"]
